add Shuffer() and CheckSumsMD5()

--- a/GPU_file_encryption/GPU_file_encryption.vcxproj
+++ b/GPU_file_encryption/GPU_file_encryption.vcxproj
@@ -128,13 +128,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\Downloads\hash-library-master\hash-library-master\md5.h" />
     <ClInclude Include="Header.h" />
+    <ClInclude Include="md5.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\Downloads\hash-library-master\hash-library-master\md5.cpp" />
     <ClCompile Include="Header.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="md5.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
