--- a/GPU_file_encryption/GPU_file_encryption.vcxproj.filters
+++ b/GPU_file_encryption/GPU_file_encryption.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClInclude Include="Header.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\Downloads\hash-library-master\hash-library-master\md5.h">
+    <ClInclude Include="md5.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
@@ -29,7 +29,7 @@
     <ClCompile Include="main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Downloads\hash-library-master\hash-library-master\md5.cpp">
+    <ClCompile Include="md5.cpp">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
   </ItemGroup>
